--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body {
 }
 
 .controls {
-  padding: 0 10px;
+  padding: 0px 100px 100px 0;
   display: inline-block;
   /* border: dashed #cccccc 2px; */
 }
